--- a/styles/custom/scss/main.scss
+++ b/styles/custom/scss/main.scss
@@ -12,16 +12,16 @@ section[id] {
 	&#landing {
 		min-height: 100vh;
 		background-color: $secondary; //svg animate leaves growing
+		background-image: url('https://images.pexels.com/photos/15639111/pexels-photo-15639111/free-photo-of-beautiful-everywhere.jpeg?auto=compress&cs=tinysrgb&w=1920&h=2880&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/4458421/pexels-photo-4458421.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/4153278/pexels-photo-4153278.jpeg?auto=compress&cs=tinysrgb&w=3333&h=5000&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/1583582/pexels-photo-1583582.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1281&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/3028961/pexels-photo-3028961.jpeg?auto=compress&cs=tinysrgb&w=3798&h=2532&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/5309507/pexels-photo-5309507.jpeg?auto=compress&cs=tinysrgb&w=3280&h=4101&dpr=1');
 		//background-image: url('https://images.pexels.com/photos/13918604/pexels-photo-13918604.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load');
-		background-image: url('../../../public/media/images/backgrounds/thin-leaves.png'); //lottie animate leaf opening up on load. On mouse over it gets flowers where ever the mouse goes. so the flowers will have animated already but hidden with my JS. each folow will have a unique class to toggle show on mouse over
-		background-size: contain;
+		//background-image: url('../../../public/media/images/backgrounds/thin-leaves.png'); //lottie animate leaf opening up on load. On mouse over it gets flowers where ever the mouse goes. so the flowers will have animated already but hidden with my JS. each folow will have a unique class to toggle show on mouse over
+		background-size: cover;
 		background-repeat: no-repeat;
-		background-size: 800px;
 		background-position: right;
 		background-attachment:fixed ;
 		//background-size: cover;
@@ -33,16 +33,21 @@ section[id] {
 		padding-top: $header-height-mobile;
 		position: relative;
 		overflow: hidden;
-		background-position-y: 150% !important;
-		background-position-x: 95% !important;
+		//background-position-y: 150% !important;
+		//background-position-x: 95% !important;
 		
 		@include bp(m) {
-			background-position-y: 180% !important;
-			background-position-x: 185% !important;
+
+			//background-position-y: 180% !important;
+			//background-position-x: 185% !important;
+			//background-position-x: 185% !important;
 			//background-position-y: 250% !important;
-			background-size: 1000px;
 			padding-top: $header-height;
 			//justify-content: center;
+		}
+
+		@include bp(l){
+			background-size: 1000px;
 		}
 
 		@include bp(lt-s) {}
@@ -77,7 +82,8 @@ section[id] {
 					font-size: 7rem;
 				}
 	
-				@include bp(xl) {
+				@include bp(lt-l) {
+					color: $white !important;
 					//font-size: 10rem;
 				}
 
@@ -160,7 +166,7 @@ section[id] {
 			content: '';
 			position: absolute;
 			width: 50%;
-			min-height: 10px;
+			min-height: 2px;
 			left: -20px;
 			bottom: 100px;
 			background: $primary;
@@ -250,7 +256,7 @@ section[id] {
 				background-repeat: no-repeat;
 				background-position: center;
 				background-size: cover;
-				grid-area: 3/1/20/27;
+				grid-area: 4/1/20/27;
 				min-height: 400px;
 				min-width: 250px;
 
@@ -688,7 +694,8 @@ section[id] {
 							display: flex;
 							justify-content: space-between;
 							margin-bottom: $gap-small;
-							margin-top: $gap-small;
+							//margin-top: $gap-small;
+							margin-top: 0;
 						}
 
 						.price_item {
@@ -875,11 +882,21 @@ footer {
 
 		p,
 		span {
-			color: $white;
-			width: 100%;
+
+		}
+		
+		
+		p,
+		span, small {
+			//color: $white !important;
+			//width: 100%;
 
 			@include bp(m) {
 				margin-bottom: 0;
+			}
+
+			&#dynamicYear{
+				@extend %small;
 			}
 		}
 
@@ -890,7 +907,8 @@ footer {
 			margin-bottom: 0;
 			
 			@include bp(lt-m){
-				width: 100%;
+				text-align: center;
+				justify-content: center;
 			}
 
 			i {
